# Rust-Programming

./: .gitignore
2 - Basic Programming/module-2/: Cargo.toml
2 - Basic Programming/module-2/src/: main.rs
3 - Rust Ownership/module-3/: Cargo.toml
3 - Rust Ownership/module-3/src/: main.rs
4 - Control Structures/module-4/: Cargo.toml
4 - Control Structures/module-4/src/: main.rs
6 - Structures, Traits, Generics, Enums/module-6/: Cargo.toml
6 - Structures, Traits, Generics, Enums/module-6/src/: analytics.rs  main.rs  project.rs  task.rs  traits.rs
7 - Iterators, Lifetimes, Closures/module-7/: Cargo.toml  README.md
7 - Iterators, Lifetimes, Closures/module-7/src/: analyzer.rs  error.rs  frequency.rs  main.rs  stats.rs  word.rs
8 - Rust Modules/module-8/: Cargo.toml  README.md
8 - Rust Modules/module-8/src/: book.rs  lib.rs  main.rs  member.rs  utils.rs
8 - Rust Modules/module-8/src/member/: membership.rs
